# failsafe

./: .gitignore
docs/: tokyo-2042.md
sim/: .dockerignore  Cargo.toml  Dockerfile  fly.toml
sim/src/: api.rs  events.rs  main.rs  state.rs
sim/src/scenarios/: mod.rs  oracle_attack.rs  stablecoin_depeg.rs  treasury_shock.rs
web/: package.json  pnpm-lock.yaml
web/app/: globals.css  layout.tsx  page.tsx
web/lib/: scenario.ts  types.ts
