[package]
name = "neon-sim"
version = "0.1.0"
edition = "2024"
rust-version = "1.95"

[[bin]]
name = "neon-sim"
path = "src/main.rs"

[dependencies]
rdk-types       = { path = "../../rdk/crates/types" }
rdk-clob        = { path = "../../rdk/crates/clob" }
rdk-oracle      = { path = "../../rdk/crates/oracle" }
rdk-funding     = { path = "../../rdk/crates/funding" }
rdk-liquidation = { path = "../../rdk/crates/liquidation" }
rdk-vault       = { path = "../../rdk/crates/vault" }
rdk-clearing    = { path = "../../rdk/crates/clearing" }

axum            = { version = "0.7", features = ["ws"] }
tokio           = { version = "1", features = ["full"] }
tower-http      = { version = "0.5", features = ["cors", "trace"] }
serde           = { version = "1", features = ["derive"] }
serde_json      = "1"
serde_yaml      = "0.9"
thiserror       = "1"
tracing         = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures         = "0.3"
uuid            = { version = "1", features = ["v4", "serde"] }

[lints.rust]
unsafe_code = "forbid"
